Added deploy script to travis.yml and added dockerrun.aws file for configuring deployment in aws

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,15 @@ after_success:
   - docker push gauravlfc93/multi-nginx
   - docker push gauravlfc93/multi-server
   - docker push gauravlfc93/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: ap-south-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-ap-south-1-935284059124
+  bucket_path: docker_multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
